namespace java org.cs.helloworldservice
namespace cpp HelloWorldService
namespace cl HelloWorldService
namespace d HelloWorldService
namespace dart HelloWorldService
namespace php HelloWorldService
namespace perl HelloWorldService
namespace haxe HelloWorldService
namespace netcore HelloWorldService


struct hello{
		1: i32 number ,
		2: string first_Name ,
		3: string last_Name ,
		4: i32 age
	}


service HelloWorldService
{
	        hello geHello(),
	
}
